[project]
name = "dagster_duck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dlt",
    "dagster-dbt",
    "dlt",
    "dbt-core",
    "dbt-duckdb",
    "polars",
    "pandas",
    "duckdb",
    "dlt[duckdb, filesystem, parquet]",
    "pyarrow"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_duck.definitions"
code_location_name = "dagster_duck"

[tool.setuptools.packages.find]
exclude=["dagster_duck_tests"]
